Try to fix vertical alignment credits

--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -103,6 +103,7 @@ body {
     }
 
     &-icon {
+      line-height: 1;
       width: 1.75em;
 
       .is-night & {
@@ -125,6 +126,7 @@ body {
     margin-left: 0.75em;
 
     &-icon {
+      line-height: 1;
       width: 2.25em;
 
       .is-night & {
